changed area fetching
