# adapter/src/main/java/eu/cokeman/cycleareastats/out/persistence/jpa/entity/AdministrativeAreaEntity.java
@@ -1,85 +1,19 @@
 package eu.cokeman.cycleareastats.out.persistence.jpa.entity;
 
 import jakarta.persistence.*;
-import org.hibernate.annotations.ColumnTransformer;
-import org.hibernate.annotations.CreationTimestamp;
-import org.hibernate.annotations.SourceType;
-import org.hibernate.annotations.UpdateTimestamp;
 import org.locationtech.jts.geom.Geometry;
-
-import java.time.Instant;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.UUID;
 
 @Entity
 @Table(name = "administrative_area", schema = "landmarks")
-public class AdministrativeAreaEntity extends BaseJpaEntity{
-
-
-    @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
-    private Integer id;
-    private String name;
-
-    @ColumnTransformer(write = "?::jsonb")
-    private String metadata;
+public class AdministrativeAreaEntity extends AdministrativeAreaBaseEntity {
     private Geometry geometry;
-    private Integer parent;
-
-    @JoinColumn(name = "level_id")
-    @OneToOne
-    private AdministrativeLevelEntity level;
-
-    public AdministrativeLevelEntity getLevel() {
-        return level;
-    }
-
-    public Integer getId() {
-        return id;
-    }
-
-    public void setId(Integer id) {
-        this.id = id;
-    }
-
-    public Integer getParent() {
-        return parent;
-    }
-
-    public void setParent(Integer parent) {
-        this.parent = parent;
-    }
-
-    public void setLevel(AdministrativeLevelEntity level) {
-        this.level = level;
-    }
-
-    public String getName() {
-        return name;
-    }
-
-    public void setName(String name) {
-        this.name = name;
-    }
 
     public Geometry getGeometry() {
         return geometry;
     }
 
-    public void setGeometry(Geometry geom) {
-        this.geometry = geom;
+    public void setGeometry(Geometry geometry) {
+        this.geometry = geometry;
     }
-
-    public String getMetadata() {
-        return metadata;
-    }
-
-    public void setMetadata(String metadata) {
-        this.metadata = metadata;
-    }
-
-
-
-
 }
+
